# python-import.nvim

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: apply-pip-compile.yml  apply-styles.yml  check-pip-compile.yml  deploy.yml  lint.yml  styles.yml  test.yml  tests.yml
lua/: python-import.lua  python_import.lua
lua/python-import/: commands.lua
lua/python_import/: api.lua  config.lua  health.lua  lookup_table.lua  notify.lua  pyright.lua  ts_utils.lua  utils.lua
scripts/: build_with_uv.sh  run_doctest.py  version_from_tag.py
src/python_import/: __init__.py  _version.py  ts_utils.py  utils.py
src/python_import/cli/: __init__.py  main.py
tests/: test_one_file.py  test_project.py
tests/sample_projects/project1/src/myproject1/a/b/c/: d.py
